# dabble

./: .travis.yml  Makefile  README.md  cabal-nix.project  cabal.project
code/: quiver-rows.cabal
code/src/lib/Quiver/Implicit/: Param.hs
code/src/lib/Quiver/Row/: Dict.hs  Entail.hs  Field.hs  Product.hs  Row.hs  Sum.hs
code/src/lib/Quiver/Row/Product/: Cast.hs  Dual.hs  Elim.hs  Intro.hs  Product.hs
code/src/lib/Quiver/Row/Sum/: Dual.hs  Elim.hs  Intersect.hs  Intro.hs  Match.hs  Partition.hs  Sum.hs
code/src/test/: Main.hs
code/src/test/Quiver/Test/Product/: Elim.hs  Intro.hs
code/src/test/Quiver/Test/Sum/: Elim.hs  Intro.hs
dabble/: dabble.cabal
dabble/src/lib/Data/Dabble/: Dict.hs  Entail.hs  Field.hs  Product.hs  Row.hs  Sum.hs
dabble/src/lib/Data/Dabble/Product/: Cast.hs  Dual.hs  Elim.hs  Intro.hs  Product.hs
dabble/src/lib/Data/Dabble/Sum/: Dual.hs  Elim.hs  Intersect.hs  Intro.hs  Match.hs  Partition.hs  Sum.hs
dabble/src/test/: Main.hs
dabble/src/test/Dabble/Test/Product/: Elim.hs  Intro.hs
dabble/src/test/Dabble/Test/Sum/: Elim.hs  Intro.hs
make/: cabal.mk
nix/: default.nix  release.nix  shell.nix
nix/source/: dabble.nix  maybevoid.nix
